test/fail/stdop-arity.rnp
1.floor(
  1,
  2,
  3,
);
---
TypeError: Expected 0 arguments
 --> fail/stdop-arity.rnp:1:8
  |
1 |   1.floor(
  | ---------^
2 | |   1,
3 | |   2,
4 | |   3,
5 | | );
  | |_^ Expected 0 arguments
  |
